--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,27 @@ asn1crypto==0.24.0
 attrs==17.4.0
 Automat==0.6.0
 awscli==1.19.55
+black==22.3.0
 blinker==1.4
 boto3==1.17.53
 botocore==1.20.55
 certifi==2018.1.18
 chardet==3.0.4
-click==6.7
+click==8.0.4
 cloud-init==21.4
 colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
+dataclasses==0.8
 decorator==4.1.2
 distro-info===0.18ubuntu0.18.04.1
 docutils==0.15.2
 httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
+importlib-metadata==4.8.3
 incremental==16.10.1
 ipython==5.5.0
 ipython-genutils==0.2.0
@@ -32,13 +35,16 @@ keyring==10.6.0
 keyrings.alt==3.0
 language-selector==0.1
 MarkupSafe==1.0
+mypy-extensions==0.4.3
 netifaces==0.10.4
 oauthlib==3.1.1
 olefile==0.45.1
 PAM==0.4.2
+pathspec==0.9.0
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==5.1.0
+platformdirs==2.4.0
 praw==7.5.0
 prawcore==2.3.0
 prompt-toolkit==1.0.15
@@ -69,9 +75,12 @@ six==1.15.0
 sos==4.1
 ssh-import-id==5.7
 systemd-python==234
+tomli==1.2.3
 traitlets==4.3.2
 tweepy==4.4.0
 Twisted==17.9.0
+typed-ast==1.5.3
+typing-extensions==4.1.1
 ubuntu-advantage-tools==27.6
 ufw==0.36
 unattended-upgrades==0.1
@@ -79,4 +88,5 @@ update-checker==0.18.0
 urllib3==1.26.4
 wcwidth==0.1.7
 websocket-client==1.3.1
+zipp==3.6.0
 zope.interface==4.3.2
