--- a/.github/workflows/megathread.yml
+++ b/.github/workflows/megathread.yml
@@ -1,6 +1,9 @@
 name: Megathread!
 on:  
   workflow_dispatch:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '0 0 * * 1'  # every day at midnight
 permissions:
