--- a/.github/workflows/megathread.yml
+++ b/.github/workflows/megathread.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install praw
     - name: Generate Megathread
       run: |
         python megathread/main.py ${{ secrets.REDDIT_CLIENT_ID }} ${{ secrets.REDDIT_CLIENT_SECRET }} ${{ secrets.REDDIT_USER_AGENT }}
