--- a/.github/workflows/megathread.yml
+++ b/.github/workflows/megathread.yml
@@ -20,8 +20,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install praw
+        pip install -r requirements.txt
     - name: Generate Megathread
+      env:
+        REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
+        REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT}}
       run: |
-        python megathread/main.py ${{ secrets.REDDIT_CLIENT_ID }} ${{ secrets.REDDIT_CLIENT_SECRET }} ${{ secrets.REDDIT_USER_AGENT }} ${{ secrets.REDDIT_USERNAME }} ${{ secrets.REDDIT_PASSWORD }}
+        python megathread/main.py    
         cat post.md
